# how-to-ADCS

./: .gitignore  README.md  pyproject.toml
adcs_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/adcs_lab/: attitude.py  frames.py
tests/: test_attitude.py  test_frames.py
