[project]
name = "adcs_lab"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"